WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233792
[Cocoa] Web Inspector: fix completion handler type signature for _WKInspectorExtension methods
https://bugs.webkit.org/show_bug.cgi?id=233792
Summary
[Cocoa] Web Inspector: fix completion handler type signature for _WKInspector...
Blaze Burg
Reported
2021-12-02 16:47:54 PST
A dictionary is not necessarily returned here, the implementation deserializes a SerializedScriptValue. While the frontend does return a dictionary payload, this is unpacked on the WebProcess-side before being sent back out via the _WKInspectorExtension APi.
Attachments
Patch v1.0
(5.32 KB, patch)
2021-12-02 17:06 PST
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-12-02 16:48:16 PST
<
rdar://problem/85995314
>
Blaze Burg
Comment 2
2021-12-02 17:06:12 PST
Created
attachment 445796
[details]
Patch v1.0
Devin Rousso
Comment 3
2021-12-02 17:09:23 PST
Comment on
attachment 445796
[details]
Patch v1.0 rs=me
EWS
Comment 4
2021-12-03 09:36:14 PST
Committed
r286497
(
244836@main
): <
https://commits.webkit.org/244836@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 445796
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug