[Cocoa] Web Inspector: fix completion handler type signature for _WKInspectorExtension methods https://bugs.webkit.org/show_bug.cgi?id=233792 <rdar://problem/85995314>

Reviewed by Devin Rousso.

* UIProcess/API/Cocoa/_WKInspectorExtension.h:
* UIProcess/API/Cocoa/_WKInspectorExtension.mm:
(-[_WKInspectorExtension evaluateScript:frameURL:contextSecurityOrigin:useContentScriptContext:completionHandler:]):
(-[_WKInspectorExtension evaluateScript:inTabWithIdentifier:completionHandler:]):
Replace the completionHandler's NSDictionary argument type with `id`.

A dictionary is not necessarily returned here because the implementation deserializes a SerializedScriptValue.
This could be a string, number, array, dictionary, or other serializable values.

While the frontend does return a dictionary payload, this is unpacked on the WebProcess-side
before being sent back out via the _WKInspectorExtension APi.



Canonical link: https://commits.webkit.org/244836@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286497 268f45cc-cd09-0410-ab3c-d52691b4dbfc